--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -15,12 +15,14 @@
   border-radius: 4px;
   padding: 7px 14px;
   position: absolute;
+  z-index: 10;
   top: 16px;
   left: 16px;
 }
 
 .favourties {
   position: absolute;
+  z-index: 10;
   top: 16px;
   right: 16px;
 }
@@ -44,6 +46,12 @@
   display: flex;
   justify-content: space-between;
   margin: 15px 0;
+}
+
+.locationDiv {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
 }
 
 .price {
