--- a/src/components/cardsContainer/CardsContainer.module.css
+++ b/src/components/cardsContainer/CardsContainer.module.css
@@ -4,6 +4,8 @@
   font-weight: 700;
   line-height: 48px;
   margin-bottom: 24px;
+  position: relative;
+  z-index: 5;
 }
 
 .cardContainer {
@@ -23,4 +25,12 @@
 
 .cardContainer>*:not(:last-child) {
   margin-right: 20px;
+}
+
+@media (max-width: 576px) {
+  .featureTitle {
+    font-size: 28px;
+    line-height: 40px;
+    margin-bottom: 20px;
+  }
 }
