--- a/src/components/homeFeatures/HomeFeatures.module.css
+++ b/src/components/homeFeatures/HomeFeatures.module.css
@@ -1,3 +1,51 @@
 .featuresParent {
-  margin-top: 72px;
+  margin: 72px 0;
+  position: relative;
+  overflow: hidden;
+}
+
+.featuresParent>*:not(:last-child) {
+  margin-bottom: 72px;
+}
+
+.circleLeft {
+  position: absolute;
+  right: -20px;
+  top: 930px;
+}
+
+.circleRight {
+  position: absolute;
+  left: -20px;
+  top: 350px;
+}
+
+@media (max-width: 576px) {
+  .featuresParent {
+    margin: 30px 0;
+  }
+
+  .featuresParent>*:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 768px) {
+  .featuresParent {
+    margin: 45px 0;
+  }
+
+  .featuresParent>*:not(:last-child) {
+    margin-bottom: 45px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+  .featuresParent {
+    margin: 60px 0;
+  }
+
+  .featuresParent>*:not(:last-child) {
+    margin-bottom: 60px;
+  }
 }
