--- a/src/components/buttons/LoginButton.module.css
+++ b/src/components/buttons/LoginButton.module.css
@@ -7,5 +7,22 @@
   background: #FFAE1B;
   border: none;
   font-weight: 600;
-  margin: 300px;
+  /* margin: 300px;  */
+}
+
+
+
+@media (max-width: 767px) {
+  .button{
+    font-size: 16px;
+    font-weight: 500;
+    margin-top: 20px;
+    margin-right: 5px;
+    background: #FFAE1B;
+    -webkit-backdrop-filter: blur(12px);
+    backdrop-filter: blur(12px);
+    padding: 13px;
+    border-radius: 10px;
+    width: 100%;
+}
 }
