--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,36 +1,132 @@
 .navMain{
-    position: fixed;
+    position: absolute;
     top: 0px;
     left: 0px;
     width: 100%;
     z-index: 1;
-}
-.navCon{
-    background-color: red;
+    height: 80px;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: transparent;
+}
+
+
+.navCon{
+    display: flex;
+}
+
+.logo{
+     width: 196px;
+     height: 50px;
 }
 
 .navBtn{
     display: none;
 }
 
+.bar{
+    height: 3px;
+    width: 28px;
+    background-color: white;
+    margin-bottom: 5px;
+    border-radius: 20px;
+}
 .navItem a{
     color: white;
-    margin-right: 10px;
+    margin-right: 40px;
     font-size: 14px;
     font-weight: 400;
     line-height: 22px;
+    font-family: Nunito;
+    text-decoration: none;
 }
 
-@media (max-width: 768px) {
+.navItem a:hover{
+    color: white;
+}
+
+.navItemSubMain{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.activeNavItem {
+  position: relative;
+}
+
+.activeNavItem:after {
+  content: '';
+  position: absolute;
+  width: 18px;
+  display: block;
+  height: 2px;
+  background-color: #FFAE1B;
+  bottom: -8px;
+}
+
+
+
+@media (max-width: 992px) {
+    .logo{
+     width: 175px;
+     height: 48px;
+}
+    .navItem a{
+    margin-right: 20px;
+}
+}
+
+@media (max-width: 767px) {
+        .logo{
+     width: 145px;
+}
     .navBtn{
-        display: block;
+    display: block;
     border: 0px !important;
     background-color: transparent;
+    float: right;
+    margin-top: 15px;
+
 }
 
+.navItemSubMain{
+    flex-direction: column;
+}
 
 .navItem{
-    border: 1px solid ;
+    font-size: 16px;
+    font-weight: 500;
+    margin-top: 20px;
+    margin-right: 5px;
+    background: rgba(58,58,58,.22);
+    -webkit-backdrop-filter: blur(12px);
+    backdrop-filter: blur(12px);
+    padding: 13px;
+    border-radius: 10px;
+    width: 50%;
+    text-align: center;
 }
+
+.navItemMain{
+    position: absolute;
+    background-color: black;
+    top: 80px;
+    left: 0px;
+    width: 100vw;
+    text-align: center;
+    padding-bottom: 30px;
+    z-index: 22;
 }
+
+.activeNavItem:after {
+
+  width: 100%;
+  bottom: -8px;
+}
+
+}
+
+
