--- a/src/components/heroSection/HeroSection.module.css
+++ b/src/components/heroSection/HeroSection.module.css
@@ -1,31 +1,153 @@
 .heroSectionMain{
     /* height: 100vh; */
-    width: 100vw;
+    width: 100%;
+    
 }
 
 .sliderImg{
-    width: 100vw;
-    height: 100vh !important;
+    width: 100%;
+    height: 610px !important;
+    position: relative;
 }
 
-.dfghj{
+.carouselIndicator{
     position: absolute;
     top: 55%;
     right: 20px;
 }
 
-.dfghj ol {
+.carouselIndicator ol {
     display: flex;
     flex-direction: column;
 }
 
 
-.dfghj ol li{
+.carouselIndicator ol li{
     /* background-color: #FFAE1B; */
     background-color: #12121266;
-
+    border: 0px;
 }
 
-.dfghj ol .active {
+.carouselIndicator ol .active {
     background-color: #FFAE1B !important;
 }
+
+.heroSliderImgMain{
+    position: relative;
+}
+
+
+
+.heroSliderMain{
+    position: relative;
+}
+
+.heroContentMain, .heroContentMain2, .heroContentMain3{
+    position: relative;
+    z-index: 2;
+    background-image: url(../../images/homepage/heroSectionImg/heroBeach.png);
+    background-repeat: no-repeat;
+    height: 610px;
+    width: 100%;
+    margin: auto;
+    color: white;
+    text-align: center;
+}
+
+.heroContentMain::before, .heroContentMain2::before , .heroContentMain3::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(18, 18, 18, 0.90) 0%, rgba(18, 18, 18, 0.20) 100%);
+    z-index: -1;
+}
+
+
+.heroContentMain2{
+    background-image: url(../../images/homepage/heroSectionImg/heroCars.png);
+}
+
+.heroContentMain3{
+    background-image: url(../../images/homepage/heroSectionImg/heraSea.png);
+}
+
+.HeroInputCon{
+    background-color: red;
+    height: 500px !important;
+    width: 100%;
+}
+
+.heroConContent{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    height: 100%;
+    width: 70%;
+}
+
+.heroSubMainHeading, .heroMainHeading{
+    font-family: Nunito;
+    font-size: 42px;
+    font-weight: 700;
+}
+.heroMainHeading{
+    font-size: 52px;
+    position: relative;
+}
+
+.heroMark{
+    position: absolute;
+    top: 30px;
+    right: -98px;
+}
+
+.heroContent{
+    font-family: Nunito;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    color: #EDEFF6;
+    margin-top: 15px;
+    margin-bottom: 48px;
+}
+
+@media (min-width: 1300px) {
+    .heroMark{
+    position: absolute;
+    top: 30px;
+    right: 30px;
+}
+}
+
+@media (max-width: 1200px) {
+    .heroSubMainHeading, .heroMainHeading{
+    font-size: 36px;
+}
+.heroMainHeading{
+    font-size: 46px;
+}
+
+}
+
+
+@media (max-width: 992px) {
+    .heroSubMainHeading, .heroMainHeading{
+    font-size: 32px;
+}
+.heroMainHeading{
+    font-size: 42px;
+}
+
+.heroContent{
+    font-size: 15px;
+    line-height: 24px;
+    color: #EDEFF6;
+    margin-top: 10px;
+    margin-bottom: 38px;
+}
+}
+
