--- a/src/components/contactUs/ContactHome.module.css
+++ b/src/components/contactUs/ContactHome.module.css
@@ -15,8 +15,7 @@
 }
 
 .subHeading {
-  margin: 16px 0;
-  /* width: 80%; */
+  margin: 16px 0 27px 0;
   font-size: 20px;
   line-height: 30px;
 }
@@ -46,7 +45,7 @@
   }
 
   .subHeading {
-    margin: 12px 0;
+    /* margin: 12px 0; */
     font-size: 16px;
     line-height: 25px;
   }
@@ -65,7 +64,7 @@
   }
 
   .leftSec {
-    max-width: 100%;
+    max-width: 80%;
   }
 
   .ContactDetails {
@@ -75,5 +74,12 @@
   .rightSec {
     font-size: 14px;
     margin: 30px 0 0;
+  }
+
+  .border {
+    background: rgba(255, 174, 27, 0.60);
+    height: 2px;
+    margin-top: 30px;
+    width: 80%;
   }
 }
