--- a/src/components/homeFeatures/HomeFeatures.module.css
+++ b/src/components/homeFeatures/HomeFeatures.module.css
@@ -28,6 +28,11 @@
   .featuresParent>*:not(:last-child) {
     margin-bottom: 30px;
   }
+
+  .circleLeft,
+  .circleRight {
+    width: 200px;
+  }
 }
 
 @media (min-width: 576px) and (max-width: 768px) {
