--- a/src/components/buttons/CardButton.module.css
+++ b/src/components/buttons/CardButton.module.css
@@ -4,7 +4,8 @@
   align-items: center;
   background-color: transparent;
   font-size: 19px;
-  padding: 6px 30px 8px;
+  padding: 0px;
+  width: 170px;
   height: 37.182px;
   border-radius: 10px;
   color: var(--yellow1-color);
