--- a/src/components/cards/FeaturesCard.module.css
+++ b/src/components/cards/FeaturesCard.module.css
@@ -52,10 +52,15 @@
   display: flex;
   align-items: center;
   font-size: 16px;
+  margin-right: 14px;
 }
 
 .price {
   color: var(--yellow1-color);
   font-size: 16px;
   font-weight: 700;
+}
+
+.eyeIcon {
+  margin: 0 6px 0 13px;
 }
