--- a/src/App.module.css
+++ b/src/App.module.css
@@ -24,6 +24,7 @@
 
   --white-color: #fff;
   --text-grey1-color: #EDEFF6;
+  --text-grey2-color: #C8C8C8;
   --text-greylite-color: #8B8B8B;
   --text-greydark-color: #002F34;
 
