--- a/src/components/inputs/HeroInput.module.css
+++ b/src/components/inputs/HeroInput.module.css
@@ -2,6 +2,7 @@
 .heroInputDrop {
     width: 320px;
     height: 50px;
+    /* font-size: 10px; */
     border-radius: 4px;
     background: var(--bg-grey2-color);
     backdrop-filter: blur(6px);
@@ -20,6 +21,10 @@
     line-height: 20px;
     letter-spacing: 0.2px;
     text-transform: uppercase;
+}
+
+.heroInput::placeholder {
+    color: var(--text-grey2-color);
 }
 
 .heroInputDrop {
