--- a/src/components/subComponents/heroSection/HeroSection.module.css
+++ b/src/components/subComponents/heroSection/HeroSection.module.css
@@ -1,5 +1,4 @@
 .heroSectionMain {
-    /* height: 100vh; */
     width: 100%;
 
 }
@@ -35,8 +34,6 @@
     position: relative;
 }
 
-
-
 .heroSliderMain {
     position: relative;
 }
@@ -46,7 +43,7 @@
 .heroContentMain3 {
     position: relative;
     z-index: 2;
-    background-image: url(../../images/homepage/heroSectionImg/heroBeach.png);
+    background-image: url(../../../images/homepage/heroSectionImg/heroBeach.png);
     background-repeat: no-repeat;
     height: 610px;
     width: 100%;
@@ -68,15 +65,13 @@
     z-index: -1;
 }
 
-
 .heroContentMain2 {
-    background-image: url(../../images/homepage/heroSectionImg/heroCars.png);
+    background-image: url(../../../images/homepage/heroSectionImg/heroCars.png);
 }
 
 .heroContentMain3 {
-    background-image: url(../../images/homepage/heroSectionImg/heraSea.png);
+    background-image: url(../../../images/homepage/heroSectionImg/heraSea.png);
 }
-
 
 .heroConContent {
     display: flex;
@@ -91,7 +86,6 @@
     font-size: 42px;
     font-weight: 700;
     margin-top: 100px;
-
 }
 
 .heroMainHeading {
@@ -106,14 +100,12 @@
 }
 
 .heroContent {
-    font-family: Nunito;
     font-size: 18px;
     font-weight: 400;
     line-height: 27px;
     color: var(--text-grey1-color);
     margin-top: 15px;
     margin-bottom: 48px;
-
 }
 
 @media (min-width: 1300px) {
@@ -126,8 +118,7 @@
 
 @media (max-width: 1200px) {
 
-    .heroSubMainHeading,
-    .heroMainHeading {
+    .heroSubMainHeading {
         font-size: 36px;
     }
 
@@ -155,5 +146,32 @@
         color: var(--text-grey1-color);
         margin-top: 10px;
         margin-bottom: 38px;
+    }
+
+    .heroMark {
+        display: none;
+    }
+}
+
+@media (max-width: 767px) {
+
+    .heroSubMainHeading {
+        margin-top: 60px;
+    }
+}
+
+@media (max-width: 576px) {
+
+    .heroSubMainHeading {
+        font-size: 26px;
+        font-weight: 600;
+    }
+
+    .heroMainHeading {
+        font-size: 36px;
+    }
+
+    .heroConContent {
+        width: 100%;
     }
 }
