--- a/src/components/heroSection/HeroSection.module.css
+++ b/src/components/heroSection/HeroSection.module.css
@@ -43,7 +43,7 @@
 .heroContentMain3 {
     position: relative;
     z-index: 2;
-    background-image: url(../../../images/homepage/heroSectionImg/heroBeach.png);
+    background-image: url(../../images/homepage/heroSectionImg/heroBeach.png);
     background-repeat: no-repeat;
     height: 610px;
     width: 100%;
@@ -66,11 +66,11 @@
 }
 
 .heroContentMain2 {
-    background-image: url(../../../images/homepage/heroSectionImg/heroCars.png);
+    background-image: url(../../images/homepage/heroSectionImg/heroCars.png);
 }
 
 .heroContentMain3 {
-    background-image: url(../../../images/homepage/heroSectionImg/heraSea.png);
+    background-image: url(../../images/homepage/heroSectionImg/heraSea.png);
 }
 
 .heroConContent {
