--- a/src/components/inputs/HeroInput.module.css
+++ b/src/components/inputs/HeroInput.module.css
@@ -35,6 +35,7 @@
     align-items: center;
     gap: 9.149px;
     background: var(--bg-grey3-color);
+    color: var(--white-color);
 }
 
 .heroInput:focus {
