--- a/src/styles/Listing.module.css
+++ b/src/styles/Listing.module.css
@@ -1,28 +1,32 @@
-.listingMain{
+.listingContainer {
+    position: relative;
+}
+
+.listingMain {
     margin-top: 110px;
     display: flex;
     justify-content: space-between;
 }
 
-.listingFilter{
+.listingFilter {
     width: 18%;
 }
 
-.listingInputHeaderMain{
+.listingInputHeaderMain {
     width: 80%;
 }
 
-.listingInputHeader{
+.listingInputHeader {
     display: flex;
-    background-color:  var(--bg-grey-color);
+    background-color: var(--bg-grey-color);
     padding: 26px 10px;
     border-radius: 10px;
 }
 
-.filter{
+.filter {
     background-color: #1E1E1E;
     text-align: center;
-    color: var(  --white-color);
+    color: var(--white-color);
     font-weight: 500;
     line-height: 23px;
     font-size: 16px;
@@ -31,25 +35,27 @@
     border-top-right-radius: 10px;
 }
 
-.filterList ul{
+.filterList ul {
     padding-left: 0px !important;
 }
 
-.filterBtn{
+.filterBtn {
     border: 0px;
     text-align: left;
 }
 
-.filterBtnMain{
+.filterBtnMain {
     position: relative;
 }
 
-.filterBtnArow{
+.filterBtnArow {
     position: absolute;
     top: 15px;
     right: 15px;
 }
-.filterList ul li, .filterBtn{
+
+.filterList ul li,
+.filterBtn {
     color: var(--white-color);
     font-size: 14px;
     font-weight: 500;
@@ -67,7 +73,7 @@
     border-bottom-right-radius: 10px;
 }
 
-.listingHeaderHeading{
+.listingHeaderHeading {
     color: #FFF;
     font-size: 24px;
     font-family: Nunito;
@@ -75,4 +81,61 @@
     font-weight: 700;
     line-height: 48px;
     margin-right: 11px;
+}
+
+.cardContainer {
+    margin: 50px 0 130px
+}
+
+.cardContainer>*:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+.bgRight {
+    position: absolute;
+    z-index: -1;
+    left: 0px;
+    bottom: 35%;
+}
+
+.bgLeft {
+    position: absolute;
+    z-index: -1;
+    right: 0px;
+    bottom: 180px;
+}
+
+@media (max-width: 1200px) {
+
+    .listingInputHeader {
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 992px) {
+    .listingMain {
+        flex-direction: column;
+    }
+
+    .listingFilter {
+        width: auto;
+    }
+
+    .listingInputHeaderMain {
+        width: 100%;
+    }
+
+    .cardContainer {
+        margin: 50px 0 130px
+    }
+}
+
+@media (max-width: 767px) {
+
+    .cardContainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
