--- a/src/App.module.css
+++ b/src/App.module.css
@@ -26,10 +26,14 @@
   --white-color: #fff;
   --text-grey1-color: #EDEFF6;
   --text-grey2-color: #C8C8C8;
+  --text-grey3-color: #667085;
   --text-greylite-color: #8B8B8B;
   --text-greylite1-color: #949494;
   --text-greydark-color: #002F34;
 
   --box-shadow1-color: rgba(0, 0, 0, 0.12);
+
+  --border-light-grey1-color: #D0D5DD;
+  --border-dark-yellow1-color: #FD7E14;
 
 }
