--- a/src/styles/Listing.module.css
+++ b/src/styles/Listing.module.css
@@ -65,6 +65,7 @@
     border-bottom: 1px solid var(--white-color);
     background-color: var(--bg-grey-color);
     width: 100%;
+    cursor: pointer;
 }
 
 .filterList ul li:last-child {
