--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -18,7 +18,7 @@
 
 .logo {
     width: 196px;
-    height: 50px;
+    height: 65px;
 }
 
 .navBtn {
@@ -68,17 +68,83 @@
     bottom: -8px;
 }
 
+.navImg{
+    margin-left: 11px;
+}
 
+.navIcon{
+    margin-left: 48px;
+    position: relative;
+}
+
+.listingFilterMain{
+    width: 232px;
+    height: 330px;
+    position: absolute;
+    top: 80px;
+    right: 100px;
+    z-index: 2;
+}
+
+.headerDropList ul {
+    padding-left: 0px !important;
+}
+
+
+
+.headerDropList ul li{
+    color: var(--white-color);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 23px;
+    list-style: none;
+    padding: 12px 15px;
+    background-color: var(--bg-grey-color);
+    width: 100%;
+    cursor: pointer;
+}
+
+.headerDropList ul li:last-child {
+    border-bottom: 0px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.headerDropList ul li:hover{
+    background-color: #494949;
+}
+
+.navDropIcon{
+    margin: 0px 22px 0px 10px;
+    width: 32px;
+    height: 32px;
+}
+
+@media (max-width: 1200px) {
+    .navItem a {
+    margin-right: 25px;
+
+}
+}
 
 @media (max-width: 992px) {
     .logo {
-        width: 175px;
-        height: 48px;
+        width: 110px;
     }
 
     .navItem a {
-        margin-right: 20px;
+        margin-right: 15px;
     }
+    .navIcon{
+    margin-left: 8px;
+}
+
+.listingFilterMain{
+    right: 100px;
+    width: 200px;
+    height: 300px;
+}
+
 }
 
 @media (max-width: 767px) {
@@ -127,7 +193,62 @@
     .activeNavItem:after {
 
         width: 100%;
-        bottom: -8px;
+        bottom: -12px;
     }
 
+
+    .navImg{
+        width: 30px;
+        height: 30px;
+    }
+
+    .listingFilterMain{
+    top: auto;
+    right: 50%;
+    transform: translate(50%);
+    width: 200px;
+    height: 300px;
+    bottom: -280px;
+}
+
+.headerDropList ul li{
+    text-align: left;
+}
+
+
+.navProfileMain{
+    width: 100%;
+}
+
+.navProfileCon{
+    display: flex;
+    justify-content: center;
+}
+}
+
+@media (max-width: 375px) {
+        .navImg{
+        width: 23px;
+        height: 23px;
+    }
+
+    .navImg{
+    margin-left: 4px;
+}
+
+.navIcon{
+    margin-left: 2px;
+}
+
+    .listingFilterMain{
+
+    width: 170px;
+    height: 300px;
+}
+
+.navDropIcon{
+    margin: 0px 10px 0px 0px;
+    width: 22px;
+    height: 22px;
+}
 }
