--- a/src/App.module.css
+++ b/src/App.module.css
@@ -27,6 +27,7 @@
   --text-grey1-color: #EDEFF6;
   --text-grey2-color: #C8C8C8;
   --text-grey3-color: #667085;
+  --text-grey4-color: #989898;
   --text-greylite-color: #8B8B8B;
   --text-greylite1-color: #949494;
   --text-greydark-color: #002F34;
