--- a/src/components/textarea/Textarea.module.css
+++ b/src/components/textarea/Textarea.module.css
@@ -20,3 +20,10 @@
   line-height: 20px;
   margin-bottom: 6px;
 }
+
+.lableMain{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5px;
+}
