--- a/src/App.module.css
+++ b/src/App.module.css
@@ -29,6 +29,7 @@
   --text-grey3-color: #667085;
   --text-grey4-color: #989898;
   --text-grey5-color: #6C6868;
+  --text-grey6-color: #282828;
   --text-greylite-color: #8B8B8B;
   --text-greylite1-color: #949494;
   --text-greydark-color: #002F34;
