--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -35,12 +35,16 @@
 
 .navItem a {
     color: white;
-    margin-right: 40px;
     font-size: 14px;
     font-weight: 400;
     line-height: 22px;
     font-family: Nunito;
     text-decoration: none;
+}
+
+.navItem:not(:last-child) {
+    margin-right: 40px;
+
 }
 
 .navItem a:hover {
@@ -121,7 +125,7 @@
 }
 
 @media (max-width: 1200px) {
-    .navItem a {
+    .navItem:not(:last-child) {
     margin-right: 25px;
 
 }
@@ -132,9 +136,10 @@
         width: 110px;
     }
 
-    .navItem a {
-        margin-right: 15px;
-    }
+    .navItem:not(:last-child) {
+    margin-right: 15px;
+
+}
     .navIcon{
     margin-left: 8px;
 }
