create and fix issues of settings pages

--- a/src/pages/settings/EditPassword.module.css
+++ b/src/pages/settings/EditPassword.module.css
@@ -1,7 +1,22 @@
-.profileMain {
-  width: 72%;
-  margin: auto;
+.content {
+  margin: 186px auto 61px 22%;
+  width: 50%;
 }
+
+@media (max-width: 767px) {
+  .content {
+    margin: 150px auto 61px 8%;
+    width: 80%;
+  }
+}
+
+@media (max-width: 375px) {
+  .content {
+    margin: 120px auto 50px auto;
+    width: 90%;
+  }
+}
+
 
 .profileHeading {
   color: var(--white-color);
@@ -32,6 +47,20 @@
 .submitButton {
   margin-top: 145px;
   text-align: center;
+}
+
+.notifiBgImgCon {
+  float: right;
+  height: 180px;
+  width: 400px;
+  overflow-y: hidden;
+  position: relative;
+  z-index: -1;
+}
+
+.notifiBgImg {
+  position: absolute;
+  right: 0px;
 }
 
 @media (max-width: 992px) {
