--- a/src/pages/settings/Settings.module.css
+++ b/src/pages/settings/Settings.module.css
@@ -1,6 +1,20 @@
-.profileMain {
-  width: 72%;
-  margin: auto;
+.content {
+  margin: 186px auto 350px 22%;
+  width: 50%;
+}
+
+@media (max-width: 767px) {
+  .content {
+    margin: 150px auto 61px 8%;
+    width: 80%;
+  }
+}
+
+@media (max-width: 375px) {
+  .content {
+    margin: 120px auto 50px auto;
+    width: 90%;
+  }
 }
 
 .profileHeading {
@@ -21,6 +35,20 @@
 
 .profileImgNameMainCon>*:not(:last-child) {
   margin-bottom: 16px;
+}
+
+.notifiBgImgCon {
+  float: right;
+  height: 100px;
+  width: 400px;
+  overflow-y: hidden;
+  position: relative;
+  z-index: -1;
+}
+
+.notifiBgImg {
+  position: absolute;
+  right: 0px;
 }
 
 @media (max-width: 992px) {
