--- a/src/components/heroSection/HeroSection.module.css
+++ b/src/components/heroSection/HeroSection.module.css
@@ -45,6 +45,8 @@
     z-index: 2;
     background-image: url(../../images/homepage/heroSectionImg/heroBeach.png);
     background-repeat: no-repeat;
+     background-size: cover;
+     background-position: center;
     height: 610px;
     width: 100%;
     margin: auto;
