--- a/src/components/cards/ListingCard.module.css
+++ b/src/components/cards/ListingCard.module.css
@@ -8,6 +8,11 @@
   box-shadow: 0px 0px 12px 1px var(-box-shadow1-color);
 }
 
+.image {
+  width: 304px;
+  height: 252px;
+}
+
 .cardContent {
   margin: 0 38px 0 20px;
   width: 100%;
@@ -100,5 +105,81 @@
     font-size: 16px;
     font-weight: 700;
     margin: 0;
+  }
+}
+
+/* featureDetials */
+
+.orderHeader {
+  /* position: relative; */
+}
+
+.icon {
+  width: 24px;
+  height: 24px;
+  margin-right: 4px;
+}
+
+.featureDetials {
+  font-size: 16px;
+  font-weight: 400px;
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+
+.subFeatures {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.milage {
+  margin-left: 20px;
+}
+
+.featureicos {
+  margin-left: 26px;
+}
+
+.featureicos>*:not(:last-child) {
+  margin-right: 20px;
+}
+
+.damage {
+  color: var(--white-color);
+  font-size: 16px;
+  font-weight: 600;
+  margin: 13px 0 20px;
+}
+
+@media (max-width: 776px) {
+
+  /* .userDiv,
+  .milage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  } */
+
+  .locationDiv {
+    flex-direction: column;
+    align-items: start;
+  }
+
+  .locationDetails,
+  .milage {
+    margin-left: 0px;
+    margin-top: 5px;
+  }
+
+  .subFeatures {
+    flex-direction: column;
+    align-items: start;
+  }
+
+  .featureicos {
+    margin-left: 0px;
+    margin-top: 10px;
   }
 }
