Build Slider and reviews in listing previews screen

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -108,7 +108,7 @@
     cursor: pointer;
 }
 
-.headerDropList ul li:last-child {
+.headerDropList ul Link li:last-child {
     border-bottom: 0px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
