--- a/src/pages/profile/Profile.module.css
+++ b/src/pages/profile/Profile.module.css
@@ -63,6 +63,9 @@
     margin-bottom: 25px;
 }
 
+.Link, .Link:hover{
+    text-decoration: none;
+}
 
 .notifiBgImgCon {
     float: right;
@@ -77,6 +80,8 @@
     position: absolute;
     right: 0px;
 }
+
+
 
 @media (max-width: 992px) {
     .profileImgNameMainCon {
