--- a/src/components/inputs/HeroInput.module.css
+++ b/src/components/inputs/HeroInput.module.css
@@ -8,6 +8,7 @@
     backdrop-filter: blur(6px);
     padding: 16px 0px 15px 26px;
     border: 0px;
+    font-size: 14px;
 }
 
 .heroInputBtn {
@@ -49,7 +50,7 @@
 }
 
 .heroInputDropIcon{
-    width: 20px;
+    width: 20px !important;
     height: 20px;
     position: absolute;
     top: 15px;
@@ -65,7 +66,7 @@
 
 
 .heroSearchIcon {
-    width: 16px;
+    width: 16px !important;
     height: 16px;
     margin-right: 8px;
     margin-bottom: 1px;
