--- a/src/components/modals/Oto.module.css
+++ b/src/components/modals/Oto.module.css
@@ -10,3 +10,14 @@
   display: flex;
   gap: 12px;
 }
+.OtoMain div{
+  justify-content: center;
+}
+
+.otpQuri{
+  color: #475467;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  margin-bottom: 60px;
+}
