--- a/src/components/modals/PopUpModal.module.css
+++ b/src/components/modals/PopUpModal.module.css
@@ -1,7 +1,7 @@
 .modalContent {
   padding: 24px 24px 20px !important;
   outline: none;
-  border-radius: 0px !important;
+  border-radius: 4px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -43,5 +43,3 @@
 .bodyChild {
   width: 100%;
 }
-
-.modal {}
