--- a/src/components/inputs/Input.module.css
+++ b/src/components/inputs/Input.module.css
@@ -24,3 +24,10 @@
   color: var(--text-grey3-color);
   font-size: 16px;
 }
+
+.errorMessage {
+  color: var(--red-color);
+  font-size: 13px;
+  line-height: 16px;
+  margin-top: 5px;
+}
