--- a/src/components/textarea/Textarea.module.css
+++ b/src/components/textarea/Textarea.module.css
@@ -1,16 +1,16 @@
-.textarea{
-    width: 100%;
-    border: 1px solid var(--border-light-grey1-color);
-    color: var(--border-light-grey1-color);
-    padding: 10px 14px;
-    font-size: 14px;
-    resize: none;
-    border-radius: 8px;
+.textarea {
+  width: 100%;
+  border: 1px solid var(--border-light-grey1-color);
+  color: var(--border-light-grey1-color);
+  padding: 10px 14px;
+  font-size: 14px;
+  resize: none;
+  border-radius: 8px;
 }
 
-.textarea::placeholder{
-    color: var(--text-grey3-color);
-    font-size: 16px;
+.textarea::placeholder {
+  color: var(--text-grey3-color);
+  font-size: 16px;
 }
 
 .lable {
@@ -21,9 +21,16 @@
   margin-bottom: 6px;
 }
 
-.lableMain{
+.lableMain {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 5px;
+}
+
+.errorMessage {
+  color: var(--red-color);
+  font-size: 13px;
+  line-height: 16px;
+  margin-top: 5px;
 }
